Worked on Output vs Input